<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    android:orientation="vertical"
    android:padding="16dp"
    android:fontFamily="sans-serif-medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="@string/back" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:text="@string/filter"
            android:textColor="#212121" />
    </LinearLayout>

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/search"
        android:inputType="text"
        android:padding="12dp"
        android:layout_marginBottom="12dp" />

    <ImageButton
        android:id="@+id/clear_input_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/clear_input"
        android:src="@drawable/ic_clear" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" />
</LinearLayout>
