<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical"
    android:fontFamily="sans-serif-medium">

    <ImageView
        android:id="@+id/friend_profile_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_profile_picture_default"
        android:contentDescription="@string/profile_picture_description"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_image_view"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/friend_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="#000000" />

    <ImageButton
        android:id="@+id/remove_friend_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_trash"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/remove_friend_description"
        android:layout_marginStart="8dp" />

    <ImageButton
        android:id="@+id/add_friend_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_add_user"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/add_friend_description"
        android:layout_marginStart="8dp" />
</LinearLayout>
